[gd_scene load_steps=8 format=3 uid="uid://cmq25gqd8rdxw"]

[ext_resource type="Theme" uid="uid://co40pijjc7hbw" path="res://style/roadRogue.tres" id="1_88ve0"]
[ext_resource type="Script" path="res://scene/player/menu/gameSummary.gd" id="1_exyns"]
[ext_resource type="PackedScene" uid="uid://bepxjqhida0n8" path="res://scene/player/ui/roadButton.tscn" id="2_llr28"]
[ext_resource type="AudioStream" uid="uid://chsan1o1ku2c7" path="res://sound/music/abstract-world-127012.mp3" id="4_dohqh"]
[ext_resource type="Material" uid="uid://d4nw1uchte7mv" path="res://scene/player/menu/main/3dText_Common.tres" id="4_iax4v"]
[ext_resource type="Shader" path="res://shader/3dtext.gdshader" id="4_ngfis"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hjrtg"]
resource_local_to_scene = true
shader = ExtResource("4_ngfis")
shader_parameter/angle = 0.6
shader_parameter/thickness = 5.0
shader_parameter/scale = 1.0
shader_parameter/shear = Vector2(0, -0.2)
shader_parameter/slices = 16
shader_parameter/outline = true
shader_parameter/outline_width = 2.0
shader_parameter/show_bound = false

[node name="GameSummary" type="CanvasLayer"]
script = ExtResource("1_exyns")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -326.0
offset_right = 317.0
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_88ve0")

[node name="continue" parent="Panel/Panel2" instance=ExtResource("2_llr28")]
material = SubResource("ShaderMaterial_hjrtg")
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = -85.0
offset_top = -70.0
offset_right = 85.0
offset_bottom = -24.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Continue"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = 43.0
offset_right = -95.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 2

[node name="wasSuccessful" type="Label" parent="Panel/Panel2/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
material = ExtResource("4_iax4v")
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "LEVEL COMPLETE"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="Panel/Panel2/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="HBoxContainer7" type="HBoxContainer" parent="Panel/Panel2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer7"]
material = ExtResource("4_iax4v")
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Time"

[node name="time" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer7"]
material = ExtResource("4_iax4v")
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "0
"

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/Panel2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer3"]
material = ExtResource("4_iax4v")
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Top Speed"

[node name="topSpeed" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer3"]
material = ExtResource("4_iax4v")
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "0
"

[node name="HBoxContainer6" type="HBoxContainer" parent="Panel/Panel2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer6"]
material = ExtResource("4_iax4v")
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Goons Crushed"

[node name="goonsCrushed" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer6"]
material = ExtResource("4_iax4v")
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "2"

[node name="HSeparator" type="HSeparator" parent="Panel/Panel2/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/Panel2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer2"]
material = ExtResource("4_iax4v")
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Coins"

[node name="coinsCollected" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer2"]
material = ExtResource("4_iax4v")
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "2"

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/Panel2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer4"]
material = ExtResource("4_iax4v")
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Powerups"

[node name="powerups" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer4"]
material = ExtResource("4_iax4v")
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "0"

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/Panel2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer5"]
material = ExtResource("4_iax4v")
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Gems"

[node name="gems" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer5"]
material = ExtResource("4_iax4v")
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "0"

[node name="HSeparator2" type="HSeparator" parent="Panel/Panel2/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="HBoxContainer8" type="HBoxContainer" parent="Panel/Panel2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer8"]
material = ExtResource("4_iax4v")
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Slot Machines"

[node name="slotMachines" type="Label" parent="Panel/Panel2/VBoxContainer/HBoxContainer8"]
material = ExtResource("4_iax4v")
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "0"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dohqh")

[connection signal="pressed" from="Panel/Panel2/continue" to="." method="_on_continue_pressed"]
